fixed spacing error

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -41,6 +41,7 @@
     font-size: 1.2rem;
     margin: none;
     padding: none;
+    padding-left: 10px;
 }
 
 .about_box1 {
